@@ -1,5 +1,5 @@
 Acknowledgements: libfdatetime
 
 Copyright (c) 2009, Joachim Metz <forensics@hoffmannbv.nl>,
-Hoffmann Investigations. All rights reserved.
+Hoffmann Investigations.
 
